--- a/f1-1-0-heart-disease-prediction.ipynb
+++ b/f1-1-0-heart-disease-prediction.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "# **PROJECT POWERED BY 42RandomState**"
+    "# **PROJECT POWERED BY Leonardo Cofone**"
    ]
   },
   {
